# fastapi-ai-chat-fallback

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  deps.py  router.py
app/core/: config.py  database.py  security.py
app/models/: db_models.py
app/schemas/: ai_request.py  user.py
app/services/: ai_service.py  openai_service.py
tests/: test_auth.py
